--- a/src/index.html
+++ b/src/index.html
@@ -139,16 +139,16 @@
         </div>
 
         <div class="row social-links">
-            <a href="" target="_blank" class="social-link">
+            <a href="https://github.com/Zer0-XD" target="_blank" class="social-link">
                 <img src="./assets/images/svg/social/git.svg" class="social-icon" alt="">
             </a>
-            <a href="" target="_blank" class="social-link">
+            <a href="https://twitter.com/me_z3ro" target="_blank" class="social-link">
                 <img src="./assets/images/svg/social/twitter.svg" class="social-icon" alt="">
             </a>
-            <a href="" target="_blank" class="social-link">
+            <a href="https://www.linkedin.com/in/anees-azhar/" target="_blank" class="social-link">
                 <img src="./assets/images/svg/social/linkedin.svg" class="social-icon" alt="">
             </a>
-            <a href="" target="_blank" class="social-link">
+            <a href="aneesazhar1993@gmail.com" target="_blank" class="social-link">
                 <img src="./assets/images/svg/social/mail.svg" class="social-icon" alt="">
             </a>
             
