--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
 
         <div class="resume-div">
             <img src="./assets/images/svg/tap.svg" class="tap-btn" alt="">
-            <a href="./assets/Anees_Resume.pdf" class="resume-btn">My Resume</a>
+            <a href="" class="resume-btn">My Resume</a>
         </div>
 
         <div class="row social-links">
@@ -148,7 +148,7 @@
             <a href="https://www.linkedin.com/in/anees-azhar/" target="_blank" class="social-link">
                 <img src="./assets/images/svg/social/linkedin.svg" class="social-icon" alt="">
             </a>
-            <a href="aneesazhar1993@gmail.com" target="_blank" class="social-link">
+            <a href="mailto:aneesazhar1993@gmail.com" target="_blank" class="social-link">
                 <img src="./assets/images/svg/social/mail.svg" class="social-icon" alt="">
             </a>
             
