--- a/src/index.html
+++ b/src/index.html
@@ -96,36 +96,36 @@
         <h1 class="section-heading">Projects</h1>
        
         <div class="row projects-row">
-            <div class="project-item">
+            <a href="https://bilingualjokes.com/" class="project-item">
                 <img src="./assets/images/projects/bilingual-joke.png" class="project-image first-project" alt="">
                 <p class="project-title">Bilingual Jokes</p>
-            </div>
-            <div class="project-item">
+            </a>
+            <a href="https://gigis.la" class="project-item">
                 <img src="./assets/images/projects/gigis.png" class="project-image second-project" alt="">
                 <p class="project-title">Gigis</p>
-            </div>
+            </a>
         </div>
 
         <div class="row projects-row">
-            <div class="project-item">
+            <a href="https://jdb.com.sg" class="project-item">
                 <img src="./assets/images/projects/jdb.png" class="project-image third-project" alt="">
                 <p class="project-title">Jdb</p>
-            </div>
-            <div class="project-item">
+            </a>
+            <a href="https://www.z-ai.com.sg/ai-smart-machine/" class="project-item">
                 <img src="./assets/images/projects/z-ai.png" class="project-image fourth-project" alt="">
                 <p class="project-title">Z-Ai</p>
-            </div>
+            </a>
         </div>
 
         <div class="row projects-row">
-            <div class="project-item">
+            <a href="https://nextjs-blog-zer0-xd.vercel.app/" class="project-item">
                 <img src="./assets/images/projects/blog.png" class="project-image fifth-project" alt="">
                 <p class="project-title">Medium style Blog</p>
-            </div>
-            <div class="project-item">
+            </a>
+            <a href="https://next-js-gdocs.vercel.app/" class="project-item">
                 <img src="./assets/images/projects/gdocs.png" class="project-image sixth-project" alt="">
                 <p class="project-title">G-Docs Clone</p>
-            </div>
+            </a>
         </div>
     </div>
 
@@ -135,7 +135,7 @@
 
         <div class="resume-div">
             <img src="./assets/images/svg/tap.svg" class="tap-btn" alt="">
-            <a href="" class="resume-btn">My Resume</a>
+            <a href="./assets/Anees_Resume.pdf" class="resume-btn">My Resume</a>
         </div>
 
         <div class="row social-links">
