--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <h1 class="hero-title">Anees</h1>
             <img src="./assets/images/svg/big_circle.svg" class="big-circle" alt="">
         </div>
-        <div>
+        <div class="stroked-div">
             <h1 class="stroked-text ">Frontend Developer </h1>
             <h1 class="stroked-text stroked-two">Creative Designer</h1>
         </div>
@@ -49,7 +49,7 @@
 
     </div>
 
-    <div class="spaced"></div>
+    <!-- <div class="spaced"></div> -->
 
     <!-- about section -->
     <div class="about-section">
@@ -67,9 +67,9 @@
                 <p class="about-text">
                     After graduating from University , I joined the team of developers where I work on a wide variety of interesting and meaningful web projects on a daily basis.
                 </p>
-                <p class="about-text">
+                <!-- <p class="about-text">
                     When not working, i watch movies or play PC games.
-                </p>
+                </p> -->
             </div>
         </div>
     </div>
