--- a/src/index.html
+++ b/src/index.html
@@ -110,10 +110,19 @@
             <a href="https://bilingualjokes.com/" class="project-item">
                 <img src="./assets/images/projects/bilingual-joke.png" class="project-image first-project" alt="">
                 <p class="project-title">Bilingual Jokes</p>
+                <div class="tag-row">
+                    <span class="tags">HTML</span>
+                    <span class="tags">CSS</span>
+                    <span class="tags">Javascript</span>
+                </div>
             </a>
             <a href="https://gigis.la" class="project-item">
                 <img src="./assets/images/projects/gigis.png" class="project-image second-project" alt="">
                 <p class="project-title">Gigis</p>
+                <div class="tag-row">
+                    <span class="tags">Vue.js</span>
+                    <span class="tags">DatoCMS</span>
+                </div>
             </a>
         </div>
 
@@ -121,10 +130,16 @@
             <a href="https://jdb.com.sg" class="project-item">
                 <img src="./assets/images/projects/jdb.png" class="project-image third-project" alt="">
                 <p class="project-title">Jdb</p>
+                <div class="tag-row">
+                    <span class="tags">Wordpress</span>
+                </div>
             </a>
             <a href="https://www.z-ai.com.sg/ai-smart-machine/" class="project-item">
                 <img src="./assets/images/projects/z-ai.png" class="project-image fourth-project" alt="">
                 <p class="project-title">Z-Ai</p>
+                <div class="tag-row">
+                    <span class="tags">Wordpress</span>
+                </div>
             </a>
         </div>
 
@@ -132,10 +147,37 @@
             <a href="https://nextjs-blog-zer0-xd.vercel.app/" class="project-item">
                 <img src="./assets/images/projects/blog.png" class="project-image fifth-project" alt="">
                 <p class="project-title">Medium style Blog</p>
+                <div class="tag-row">
+                    <span class="tags">Next.js</span>
+                    <span class="tags">Firebase</span>
+                </div>
             </a>
             <a href="https://next-js-gdocs.vercel.app/" class="project-item">
                 <img src="./assets/images/projects/gdocs.png" class="project-image sixth-project" alt="">
                 <p class="project-title">G-Docs Clone</p>
+                <div class="tag-row">
+                    <span class="tags">Next.js</span>
+                    <span class="tags">Firebase</span>
+                </div>
+            </a>
+        </div>
+
+        <div class="row projects-row">
+            <a href="https://play.google.com/store/apps/details?id=com.bingline" class="project-item">
+                <img src="./assets/images/projects/bingline.png" class="project-image fifth-project" alt="">
+                <p class="project-title">Bingline</p>
+                <div class="tag-row">
+                    <span class="tags">React Native</span>
+                    <span class="tags">Firebase</span>
+                </div>
+            </a>
+            <a href="https://www.aggoldsmith.com/latest" class="project-item">
+                <img src="./assets/images/projects/agweb.png" class="project-image sixth-project" alt="">
+                <p class="project-title">Arney Guess Goldsmith</p>
+                <div class="tag-row">
+                    <span class="tags">Vue.js</span>
+                    <span class="tags">GhostCMS</span>
+                </div>
             </a>
         </div>
     </div>
