--- a/src/index.html
+++ b/src/index.html
@@ -111,17 +111,17 @@
                 <img src="./assets/images/projects/bilingual-joke.png" class="project-image first-project" alt="">
                 <p class="project-title">Bilingual Jokes</p>
                 <div class="tag-row">
-                    <span class="tags">HTML</span>
-                    <span class="tags">CSS</span>
-                    <span class="tags">Javascript</span>
+                    <span class="tags tag-html">HTML</span>
+                    <span class="tags tag-css">CSS</span>
+                    <span class="tags tag-js">Javascript</span>
                 </div>
             </a>
             <a href="https://gigis.la" class="project-item">
                 <img src="./assets/images/projects/gigis.png" class="project-image second-project" alt="">
                 <p class="project-title">Gigis</p>
                 <div class="tag-row">
-                    <span class="tags">Vue.js</span>
-                    <span class="tags">DatoCMS</span>
+                    <span class="tags tag-vue">Vue.js</span>
+                    <span class="tags tag-cms">DatoCMS</span>
                 </div>
             </a>
         </div>
@@ -131,14 +131,14 @@
                 <img src="./assets/images/projects/jdb.png" class="project-image third-project" alt="">
                 <p class="project-title">Jdb</p>
                 <div class="tag-row">
-                    <span class="tags">Wordpress</span>
+                    <span class="tags tag-wp">Wordpress</span>
                 </div>
             </a>
             <a href="https://www.z-ai.com.sg/ai-smart-machine/" class="project-item">
                 <img src="./assets/images/projects/z-ai.png" class="project-image fourth-project" alt="">
                 <p class="project-title">Z-Ai</p>
                 <div class="tag-row">
-                    <span class="tags">Wordpress</span>
+                    <span class="tags tag-wp">Wordpress</span>
                 </div>
             </a>
         </div>
@@ -148,16 +148,16 @@
                 <img src="./assets/images/projects/blog.png" class="project-image fifth-project" alt="">
                 <p class="project-title">Medium style Blog</p>
                 <div class="tag-row">
-                    <span class="tags">Next.js</span>
-                    <span class="tags">Firebase</span>
+                    <span class="tags tag-react">Next.js</span>
+                    <span class="tags tag-firebase">Firebase</span>
                 </div>
             </a>
             <a href="https://next-js-gdocs.vercel.app/" class="project-item">
                 <img src="./assets/images/projects/gdocs.png" class="project-image sixth-project" alt="">
                 <p class="project-title">G-Docs Clone</p>
                 <div class="tag-row">
-                    <span class="tags">Next.js</span>
-                    <span class="tags">Firebase</span>
+                    <span class="tags tag-react">Next.js</span>
+                    <span class="tags tag-firebase">Firebase</span>
                 </div>
             </a>
         </div>
@@ -167,16 +167,16 @@
                 <img src="./assets/images/projects/bingline.png" class="project-image fifth-project" alt="">
                 <p class="project-title">Bingline</p>
                 <div class="tag-row">
-                    <span class="tags">React Native</span>
-                    <span class="tags">Firebase</span>
+                    <span class="tags tag-rn">React Native</span>
+                    <span class="tags tag-firebase">Firebase</span>
                 </div>
             </a>
             <a href="https://www.aggoldsmith.com/latest" class="project-item">
                 <img src="./assets/images/projects/agweb.png" class="project-image sixth-project" alt="">
                 <p class="project-title">Arney Guess Goldsmith</p>
                 <div class="tag-row">
-                    <span class="tags">Vue.js</span>
-                    <span class="tags">GhostCMS</span>
+                    <span class="tags tag-vue">Vue.js</span>
+                    <span class="tags tag-cms">GhostCMS</span>
                 </div>
             </a>
         </div>
