--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
 
         <div class="row projects-row">
             <a href="https://play.google.com/store/apps/details?id=com.bingline" class="project-item">
-                <img src="./assets/images/projects/bingline.png" class="project-image fifth-project" alt="">
+                <img src="./assets/images/projects/bingline.png" class="project-image seventh-project" alt="">
                 <p class="project-title">Bingline</p>
                 <div class="tag-row">
                     <span class="tags tag-rn">React Native</span>
@@ -172,7 +172,7 @@
                 </div>
             </a>
             <a href="https://www.aggoldsmith.com/latest" class="project-item">
-                <img src="./assets/images/projects/agweb.png" class="project-image sixth-project" alt="">
+                <img src="./assets/images/projects/agweb.png" class="project-image eight-project" alt="">
                 <p class="project-title">Arney Guess Goldsmith</p>
                 <div class="tag-row">
                     <span class="tags tag-vue">Vue.js</span>
