--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
         <h1 class="section-heading">Projects</h1>
        
         <div class="row projects-row">
-            <a href="https://bilingualjokes.com/" class="project-item">
+            <a target="_blank" href="https://bilingualjokes.com/" class="project-item">
                 <img src="./assets/images/projects/bilingual-joke.png" class="project-image first-project" alt="">
                 <p class="project-title">Bilingual Jokes</p>
                 <div class="tag-row">
@@ -116,7 +116,7 @@
                     <span class="tags tag-js">Javascript</span>
                 </div>
             </a>
-            <a href="https://gigis.la" class="project-item">
+            <a target="_blank" href="https://gigis.la" class="project-item">
                 <img src="./assets/images/projects/gigis.png" class="project-image second-project" alt="">
                 <p class="project-title">Gigis</p>
                 <div class="tag-row">
@@ -127,14 +127,14 @@
         </div>
 
         <div class="row projects-row">
-            <a href="https://jdb.com.sg" class="project-item">
+            <a target="_blank" href="https://jdb.com.sg" class="project-item">
                 <img src="./assets/images/projects/jdb.png" class="project-image third-project" alt="">
                 <p class="project-title">Jdb</p>
                 <div class="tag-row">
                     <span class="tags tag-wp">Wordpress</span>
                 </div>
             </a>
-            <a href="https://www.z-ai.com.sg/ai-smart-machine/" class="project-item">
+            <a target="_blank" href="https://www.z-ai.com.sg/ai-smart-machine/" class="project-item">
                 <img src="./assets/images/projects/z-ai.png" class="project-image fourth-project" alt="">
                 <p class="project-title">Z-Ai</p>
                 <div class="tag-row">
@@ -144,7 +144,7 @@
         </div>
 
         <div class="row projects-row">
-            <a href="https://nextjs-blog-zer0-xd.vercel.app/" class="project-item">
+            <a target="_blank" href="https://nextjs-blog-zer0-xd.vercel.app/" class="project-item">
                 <img src="./assets/images/projects/blog.png" class="project-image fifth-project" alt="">
                 <p class="project-title">Medium style Blog</p>
                 <div class="tag-row">
@@ -152,7 +152,7 @@
                     <span class="tags tag-firebase">Firebase</span>
                 </div>
             </a>
-            <a href="https://next-js-gdocs.vercel.app/" class="project-item">
+            <a target="_blank" href="https://next-js-gdocs.vercel.app/" class="project-item">
                 <img src="./assets/images/projects/gdocs.png" class="project-image sixth-project" alt="">
                 <p class="project-title">G-Docs Clone</p>
                 <div class="tag-row">
@@ -163,7 +163,7 @@
         </div>
 
         <div class="row projects-row">
-            <a href="https://play.google.com/store/apps/details?id=com.bingline" class="project-item">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.bingline" class="project-item">
                 <img src="./assets/images/projects/bingline.png" class="project-image seventh-project" alt="">
                 <p class="project-title">Bingline</p>
                 <div class="tag-row">
@@ -171,7 +171,7 @@
                     <span class="tags tag-firebase">Firebase</span>
                 </div>
             </a>
-            <a href="https://www.aggoldsmith.com/latest" class="project-item">
+            <a target="_blank" href="https://www.aggoldsmith.com/latest" class="project-item">
                 <img src="./assets/images/projects/agweb.png" class="project-image eight-project" alt="">
                 <p class="project-title">Arney Guess Goldsmith</p>
                 <div class="tag-row">
@@ -188,7 +188,7 @@
 
         <div class="resume-div">
             <img src="./assets/images/svg/tap.svg" class="tap-btn" alt="">
-            <a href="./assets/Anees_Resume.pdf" class="resume-btn">My Resume</a>
+            <a target="_blank" href="./assets/Anees_Resume.pdf" class="resume-btn">My Resume</a>
         </div>
 
         <div class="row social-links">
