--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <main class="page"  >
     <!-- hero section -->
     <div class="hero">   
+
+        <a href="#projects" id="project-span"> Projects </a>
         <!-- bg lines -->
         <img src="./assets/images/svg/hero_line.svg" class="bg-line" alt=""> 
         <img src="./assets/images/svg/hero_line_mobile.svg" class="bg-line-mobile" alt=""> 
@@ -42,17 +44,17 @@
         </div>
 
         <!-- scrolldown -->
-        <div class="scroll-down">
+        <a class="scroll-down" href="#about-section">
             <span class="scroll-text">Scroll down</span>
             <img src="./assets/images/svg/down_arrow.svg" class="down-arrow" alt="">
-        </div>
+        </a>
 
     </div>
 
     <!-- <div class="spaced"></div> -->
 
     <!-- about section -->
-    <div class="about-section">
+    <div class="about-section" id="about-section">
         <h1 class="section-heading">About Me</h1>
         <div class="split">
             <div class="profile-div">
@@ -103,7 +105,7 @@
     </div>
 
     <!-- projects section -->
-    <div class="projects-section">
+    <div class="projects-section" id="projects">
         <h1 class="section-heading">Projects</h1>
        
         <div class="row projects-row">
@@ -207,6 +209,9 @@
             
         </div>
     </div>
+
+    <a href="#" class="scroll-top">↑</a>
+
 </main>
 
     <!-- ---------- -->
