--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <!-- scrolldown -->
-        <a class="scroll-down" href="#about-section">
+        <a class="scroll-down" id="scroll-down" href="#about-section">
             <span class="scroll-text">Scroll down</span>
             <img src="./assets/images/svg/down_arrow.svg" class="down-arrow" alt="">
         </a>
@@ -122,6 +122,7 @@
                 <img src="./assets/images/projects/gigis.png" class="project-image second-project" alt="">
                 <p class="project-title">Gigis</p>
                 <div class="tag-row">
+                    <span class="tags tag-css">CSS</span>
                     <span class="tags tag-vue">Vue.js</span>
                     <span class="tags tag-cms">DatoCMS</span>
                 </div>
@@ -134,12 +135,14 @@
                 <p class="project-title">Jdb</p>
                 <div class="tag-row">
                     <span class="tags tag-wp">Wordpress</span>
+                    <span class="tags tag-css">CSS</span>
                 </div>
             </a>
             <a target="_blank" href="https://www.z-ai.com.sg/ai-smart-machine/" class="project-item">
                 <img src="./assets/images/projects/z-ai.png" class="project-image fourth-project" alt="">
                 <p class="project-title">Z-Ai</p>
                 <div class="tag-row">
+                    <span class="tags tag-css">CSS</span>
                     <span class="tags tag-wp">Wordpress</span>
                 </div>
             </a>
@@ -152,6 +155,7 @@
                 <div class="tag-row">
                     <span class="tags tag-react">Next.js</span>
                     <span class="tags tag-firebase">Firebase</span>
+                    <span class="tags tag-tailwind">Tailwind</span>
                 </div>
             </a>
             <a target="_blank" href="https://next-js-gdocs.vercel.app/" class="project-item">
@@ -160,6 +164,7 @@
                 <div class="tag-row">
                     <span class="tags tag-react">Next.js</span>
                     <span class="tags tag-firebase">Firebase</span>
+                    <span class="tags tag-material">MaterialUi</span>
                 </div>
             </a>
         </div>
@@ -178,6 +183,7 @@
                 <p class="project-title">Arney Guess Goldsmith</p>
                 <div class="tag-row">
                     <span class="tags tag-vue">Vue.js</span>
+                    <span class="tags tag-css">CSS</span>
                     <span class="tags tag-cms">GhostCMS</span>
                 </div>
             </a>
