--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <!-- hero section -->
     <div class="hero">   
 
-        <a href="#projects" id="project-span"> Projects </a>
+        <a href="#projects" class="project-span" id="project-span"> Projects </a>
         <!-- bg lines -->
         <img src="./assets/images/svg/hero_line.svg" class="bg-line" alt=""> 
         <img src="./assets/images/svg/hero_line_mobile.svg" class="bg-line-mobile" alt=""> 
@@ -108,10 +108,10 @@
     <div class="projects-section" id="projects">
         <h1 class="section-heading">Projects</h1>
        
-        <div class="row projects-row">
+        <div class="projects-row">
             <a target="_blank" href="https://bilingualjokes.com/" class="project-item">
                 <p class="project-title">Bilingual Jokes</p>
-                <img src="./assets/images/projects/bilingual-joke.png" class="project-image first-project" alt="">
+                <img src="./assets/images/projects/bilingual-joke.jpeg" class="project-image first-project" alt="">
                 <div class="tag-row">
                     <span class="tags tag-html">HTML</span>
                     <span class="tags tag-css">CSS</span>
@@ -120,7 +120,7 @@
             </a>
             <a target="_blank" href="https://gigis.la" class="project-item">
                 <p class="project-title">Gigis</p>
-                <img src="./assets/images/projects/gigis.png" class="project-image second-project" alt="">
+                <img src="./assets/images/projects/gigis.jpeg" class="project-image second-project" alt="">
                 <div class="tag-row">
                     <span class="tags tag-css">CSS</span>
                     <span class="tags tag-vue">Vue.js</span>
@@ -129,10 +129,10 @@
             </a>
         </div>
 
-        <div class="row projects-row">
+        <div class="projects-row">
             <a target="_blank" href="https://jdb.com.sg" class="project-item">
                 <p class="project-title">Jdb</p>
-                <img src="./assets/images/projects/jdb.png" class="project-image third-project" alt="">
+                <img src="./assets/images/projects/jdb.jpeg" class="project-image third-project" alt="">
                 <div class="tag-row">
                     <span class="tags tag-wp">Wordpress</span>
                     <span class="tags tag-css">CSS</span>
@@ -140,7 +140,7 @@
             </a>
             <a target="_blank" href="https://www.z-ai.com.sg/ai-smart-machine/" class="project-item">
                 <p class="project-title">Z-Ai</p>
-                <img src="./assets/images/projects/z-ai.png" class="project-image fourth-project" alt="">
+                <img src="./assets/images/projects/z-ai.jpeg" class="project-image fourth-project" alt="">
                 <div class="tag-row">
                     <span class="tags tag-css">CSS</span>
                     <span class="tags tag-wp">Wordpress</span>
@@ -148,10 +148,10 @@
             </a>
         </div>
 
-        <div class="row projects-row">
+        <div class="projects-row">
             <a target="_blank" href="https://nextjs-blog-zer0-xd.vercel.app/" class="project-item">
                 <p class="project-title">Medium style Blog</p>
-                <img src="./assets/images/projects/blog.png" class="project-image fifth-project" alt="">
+                <img src="./assets/images/projects/blog.jpeg" class="project-image fifth-project" alt="">
                 <div class="tag-row">
                     <span class="tags tag-react">Next.js</span>
                     <span class="tags tag-firebase">Firebase</span>
@@ -160,7 +160,7 @@
             </a>
             <a target="_blank" href="https://next-js-gdocs.vercel.app/" class="project-item">
                 <p class="project-title">G-Docs Clone</p>
-                <img src="./assets/images/projects/gdocs.png" class="project-image sixth-project" alt="">
+                <img src="./assets/images/projects/gdocs.jpeg" class="project-image sixth-project" alt="">
                 <div class="tag-row">
                     <span class="tags tag-react">Next.js</span>
                     <span class="tags tag-firebase">Firebase</span>
@@ -169,10 +169,10 @@
             </a>
         </div>
 
-        <div class="row projects-row">
+        <div class="projects-row">
             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.bingline" class="project-item">
                 <p class="project-title">Bingline</p>
-                <img src="./assets/images/projects/bingline.png" class="project-image seventh-project" alt="">
+                <img src="./assets/images/projects/bingline.jpeg" class="project-image seventh-project" alt="">
                 <div class="tag-row">
                     <span class="tags tag-rn">React Native</span>
                     <span class="tags tag-firebase">Firebase</span>
@@ -180,9 +180,9 @@
             </a>
             <a target="_blank" href="https://www.aggoldsmith.com/latest" class="project-item">
                 <p class="project-title">Arney Guess Goldsmith</p>
-                <img src="./assets/images/projects/agweb.png" class="project-image eight-project" alt="">
+                <img src="./assets/images/projects/ag-web.jpeg" class="project-image eight-project" alt="">
                 <div class="tag-row">
-                    <span class="tags tag-vue">Vue.js</span>
+                    <span class="tags tag-vue">NuxtJs</span>
                     <span class="tags tag-css">CSS</span>
                     <span class="tags tag-cms">GhostCMS</span>
                 </div>
