--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <script src="/node_modules/pace-js/pace.min.js"></script>
     <script src="./js/loading.js"></script>
     <title>Anees - my portfolio</title>
+
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
     <div id="preloader">
