--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,9 @@
             <img src="./assets/images/svg/big_circle.svg" class="big-circle" alt="">
         </div>
         <div class="stroked-div">
-            <h1 class="stroked-text ">Frontend Developer </h1>
-            <h1 class="stroked-text stroked-two">Creative Designer</h1>
+<!--             <h1 class="stroked-text ">Frontend Developer </h1> -->
+<!--             <h1 class="stroked-text stroked-two">Creative Designer</h1>  -->
+                        <h1 class="stroked-text stroked-two ">Frontend Developer </h1>
         </div>
 
         <!-- scrolldown -->
