added triangle_token website to projects

--- a/src/index.html
+++ b/src/index.html
@@ -161,13 +161,13 @@
                     <span class="tags tag-tailwind">Tailwind</span>
                 </div>
             </a>
-            <a target="_blank" href="https://next-js-gdocs.vercel.app/" class="project-item">
-                <p class="project-title">G-Docs Clone</p>
-                <img src="./assets/images/projects/gdocs.jpeg" class="project-image sixth-project" alt="">
+            <a target="_blank" href="https://www.utilitytriangle.com/" class="project-item">
+                <p class="project-title">Triangle Token</p>
+                <img src="./assets/images/projects/utility_token.png" class="project-image sixth-project" alt="">
                 <div class="tag-row">
-                    <span class="tags tag-react">Next.js</span>
-                    <span class="tags tag-firebase">Firebase</span>
-                    <span class="tags tag-material">MaterialUi</span>
+                    <span class="tags tag-react">HTML</span>
+                    <span class="tags tag-firebase">CSS</span>
+                    <span class="tags tag-material">Javascript</span>
                 </div>
             </a>
         </div>
